# halbu-editor

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmds.rs  main.rs
src/css/: halbu.css  pico.css  skeleton.css  styles.css  water.css
src/lib/: Attributes.svelte  Character.svelte  CharacterPicker.svelte  General.svelte  Mercenary.svelte  Save.svelte  SavePicker.svelte  SettingsPage.svelte  Waypoints.svelte
src/lib/tabs/: Quests.svelte  Skills.svelte  Waypoints.svelte
src/lib/tabs/Character/: Character.svelte  experience.json  titles.json
src/lib/tabs/Mercenary/: Mercenary.svelte  names.json  variants.json
src/lib/tabs/quests/: Quests.svelte  actquests.json
src/lib/tabs/skills/: Skill.svelte  SkillTooltip.svelte  Skills.svelte  skillpages.json  skillstrings.json
src/lib/utils/: Constants.Svelte  Logs.svelte  Message.svelte  Settings.svelte  Utils.svelte  actions.js
src/res/: charstats.json  skilldesc.json  skills.json
static/: .~lock.skilldesc.csv#  .~lock.skills.csv#  calcs.py  generate_json.py  missiles.txt  skills_complete.json
static/preprocess/: calcs.py  data.py  main.py
