[package]
name = "halbu-editor"
version = "0.0.0"
description = "Diablo II : Resurrected Save Editor"
authors = ["feor"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "os-all",
    "fs-create-dir",
    "fs-read-file",
    "fs-write-file",
    "fs-read-dir",
    "path-all",
    "dialog-all",
] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1.0"
halbu = { path = "../libhalbu/" }
log = "0.4.20"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
